--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "rootDir": ".",
     "paths": {
       "*": ["./node_modules/*"],
-      "backend/*": ["backend/*"]
+      "backend/*": ["backend/src/*"]
     }
   },
   "include": ["./backend/**/*.ts"],
