--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "dev": "concurrently \"npm run backend:dev\" \"npm run frontend:dev\"",
     "build": "npm run backend:build && npm run frontend:build",
     "run": "concurrently \"npm run backend:run\" \"npm run frontend:dev\""
+  },
+  "dependencies": {
+    "concurrently": "^9.2.1"
   }
 }
