--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,20 +7,25 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "run": "npm run preview"
   },
   "dependencies": {
     "@types/react-router": "^5.1.20",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
     "axios": "^1.12.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.3",
+    "sass": "^1.93.2",
     "universal-cookie": "^8.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/axios": "^0.9.36",
-    "@types/react": "^19.2.0",
-    "@types/react-dom": "^19.2.0",
+
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react-swc": "^4.1.0",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
