--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -25,7 +25,7 @@
     "noUncheckedSideEffectImports": true,
 
     "paths": {
-      "frontend/*": ["src/*"],
+      "frontend/*": ["./src/*"],
     }
   },
   "include": ["src"]
