--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -20,12 +20,13 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "erasableSyntaxOnly": true,
+    "erasableSyntaxOnly": false,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
 
     "paths": {
       "frontend/*": ["./src/*"],
+      "common/*": ["../common/src/*"]
     }
   },
   "include": ["src"]
