--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -4,7 +4,7 @@
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" },
     {
-      "path": "../backend/tsconfig.json",
+      "path": "../common/tsconfig.json"
     }
   ]
 }
