--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "dev": "tsx src/app.ts",
     "build": "tsc -p tsconfig.json && tsc-alias",
     "run": "node dist/src/app.js",
-    "build_and_run": "npm run build && npm run run"
+    "build_and_run": "npm run build && npm run run",
+    "generate:measurements": "tsx scripts/FillTestStationWithRandomData.ts"
   },
   "private": true,
   "dependencies": {
